--- a/index.html
+++ b/index.html
@@ -235,6 +235,16 @@
                 <p>Class of 2020</p>
             </div>
           </div>
+          <div class="row" data-aos="fade-left">
+            <div class="section-title" data-aos="fade-up">
+              <h2>Undergraduate</h2>
+            </div>
+          <div class="col-lg-3 col-md-4">
+              <h3>Binghamton University</h3>
+              <p>Bachelor of Science in Computer Science</p>
+              <p>Class of 2020</p>
+          </div>
+        </div>
         </div>
       </div>
     </section><!-- End Features Section -->
