--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <p>Bachelor of Science in Computer Science</p>
                 <p>Class of 2020</p>
           </div>
-          <div class="col" data-aos="fade-left" data-aos-delay="200">
+          <div class="col" data-aos="fade-right" data-aos-delay="200">
             <div class="section-title" data-aos="fade-up">
               <h2>Graduate</h2>
             </div>
