--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
             </div>
         </div>
       </div>
+    </div>
     </section><!-- End Features Section -->
 
     <!-- ======= Counts Section ======= -->
