--- a/index.html
+++ b/index.html
@@ -257,10 +257,9 @@
             <div class="section-title" data-aos="fade-up">
               <h2>Undergraduate</h2>
             </div>
-              <h2 style="font-family: 'Raleway', sans-serif; font-size: 27px;"><b>Binghamton University</b></h2>
-              <div style="font-family: 'Raleway', sans-serif; font-size: 15px;">Bachelor of Science in Computer Science</div>
-              <div style="font-family: 'Raleway', sans-serif; font-size: 15px;">Class of 2020</div>
-        </div>
+            <div><p style="float: left;"><img style="width: 48px; height: 50px" src="/assets/img/bulogo.png"></p><p><h2 style="font-family: 'Raleway', sans-serif; font-size: 27px;"><b>Binghamton University</b></h2></p></div>
+            <div style="font-family: 'Raleway', sans-serif; font-size: 16px;">B.S. in Computer Science</div>
+          </div>
         <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
         <div class="row" data-aos="fade-left">
           <div class="section-title" data-aos="fade-up">
