--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
                   <li><i><span class="iconify" data-icon="logos:java" data-inline="false"></span></i> Java</li>
                   <li><i><span class="iconify" data-icon="logos:arduino" data-inline="false"></span></i> Arduino</li>
                 </ul>
+                <div><a href="https://www.youtube.com/watch?v=J2vjPq2b_tk" target="_blank">Check It Out →</a></div>
               </div>
             </div>
           </div>
@@ -318,6 +319,7 @@
               <li><i><span class="iconify" data-icon="vscode-icons:file-type-robots" data-inline="false"></span></i> ROSbot 2.0</li>
               <li><i><span class="iconify" data-icon="flat-color-icons:linux" data-inline="false"></span></i> Linux</li>
             </ul>
+            <div><a href="https://www.youtube.com/watch?v=GBpPjOutlBk" target="_blank">Check It Out →</a></div>
           </div>
         </div>
 
