--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="/index">Home</a></li>
+          <li class="active"><a href="#hero">Home</a></li>
           <li><a href="#about">Work Experience</a></li>
           <li><a href="#features">Skills</a></li>
+          <li><a href="#details">Projects</a></li>
+          <li><a href="#footer">Contact</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
@@ -70,7 +72,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero">
+  <section id="hero" class="hero">
 
     <div class="container">
       <div class="row justify-content-between">
