--- a/index.html
+++ b/index.html
@@ -257,18 +257,18 @@
           </div>
           <div class="row" data-aos="fade-left">
             <div class="section-title" data-aos="fade-up">
-              <h2>Undergraduate</h2>
+              <h2>Graduate</h2>
             </div>
-            <div><p style="float: left;"><img style="width: 48px; height: 50px" src="/assets/img/bulogo.png"></p><p><h2 style="font-family: 'Raleway', sans-serif; font-size: 27px;"><b>Binghamton University</b></h2></p></div>
-            <div style="font-family: 'Raleway', sans-serif; font-size: 16px;">B.S. in Computer Science</div>
+            <div><p style="float: left;"><img style="width: 51px; height: 50px" src="/assets/img/cornell.gif"></p><p><h2 style="font-family: 'Raleway', sans-serif; font-size: 27px;"><b>Cornell University</b></h2></p></div>
+              <h2 style="font-family: 'Raleway', sans-serif; font-size: 16px;">M.Eng. in Engineering Management</h2>
           </div>
         <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
         <div class="row" data-aos="fade-left">
           <div class="section-title" data-aos="fade-up">
-            <h2>Graduate</h2>
+            <h2>Undergraduate</h2>
           </div>
-            <h2 style="font-family: 'Raleway', sans-serif; font-size: 27px;"><b>TBD</b></h2>
-            <!--<div style="font-family: 'Raleway', sans-serif; font-size: 15px;">M.S.</div>-->
+          <div><p style="float: left;"><img style="width: 48px; height: 50px" src="/assets/img/bulogo.png"></p><p><h2 style="font-family: 'Raleway', sans-serif; font-size: 27px;"><b>Binghamton University</b></h2></p></div>
+          <div style="font-family: 'Raleway', sans-serif; font-size: 16px;">B.S. in Computer Science</div>
         </div>
       </div>
       </div>
