--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
               <div class="icon"><i><img style="width: 48px; height: 48px" src="/assets/img/nyctreats.png"/></i></div>
-              <h4 class="title"><a href="https://nyctreats.co/" target="_blank">NYC Treats</a></h4>
+              <h4 class="title"><a href="https://www.instagram.com/nyctreats/" target="_blank">NYC Treats</a></h4>
               <p class="description">2014 - Present | CEO with 157,000+ Follower Base</p>
             </div>
 
