--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
               <div class="icon"><i><img style="width: 48px; height: 48px" src="/assets/img/nyctreats.png"/></i></div>
               <h4 class="title"><a href="https://www.instagram.com/nyctreats/" target="_blank">NYC Treats</a></h4>
-              <p class="description">2014 - Present | CEO with 157,000+ Follower Base</p>
+              <p class="description">2014 - Present | CEO with 163,000+ Follower Base</p>
             </div>
 
           </div>
@@ -261,6 +261,7 @@
             </div>
             <div><p style="float: left;"><img style="width: 51px; height: 50px" src="/assets/img/cornell.gif"></p><p><h2 style="font-family: 'Raleway', sans-serif; font-size: 27px;"><b>Cornell University</b></h2></p></div>
               <h2 style="font-family: 'Raleway', sans-serif; font-size: 16px;">M.Eng. in Engineering Management</h2>
+              <h3 style="font-family: 'Raleway', sans-serif; font-size: 16px;">2021 - 2023</h3>
           </div>
         <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
         <div class="row" data-aos="fade-left">
@@ -268,7 +269,8 @@
             <h2>Undergraduate</h2>
           </div>
           <div><p style="float: left;"><img style="width: 48px; height: 50px" src="/assets/img/bulogo.png"></p><p><h2 style="font-family: 'Raleway', sans-serif; font-size: 27px;"><b>Binghamton University</b></h2></p></div>
-          <div style="font-family: 'Raleway', sans-serif; font-size: 16px;">B.S. in Computer Science</div>
+          <h2 style="font-family: 'Raleway', sans-serif; font-size: 16px;">B.S. in Computer Science</h2>
+          <h3 style="font-family: 'Raleway', sans-serif; font-size: 16px;">2016 - 2020</h3>
         </div>
       </div>
       </div>
