--- a/about.html
+++ b/about.html
@@ -47,10 +47,9 @@
     <header class="header-area">
 
         <!-- Top Header Area -->
-        <div class="top-header-area">
+        <!-- <div class="top-header-area">
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-between">
-                    <!-- Breaking News -->
                     <div class="col-12 col-sm-6">
                         <div class="breaking-news">
                             <div id="breakingNewsTicker" class="ticker">
@@ -62,8 +61,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- Top Social Info -->
                     <div class="col-12 col-sm-6">
                         <div class="top-social-info text-right">
                             <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
@@ -76,7 +73,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- Navbar Area -->
         <div class="delicious-main-menu">
