--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>Delicious - Food Blog Template | About</title>
+    <title>Recipes by Emily</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
