--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                             <!-- Nav Start -->
                             <div class="classynav">
                                 <ul>
-                                    <li class="active"><a href="index.html">Home</a></li>
-                                    <li><a href="#">Pages</a>
+                                    <li class="active"><a href="/">Home</a></li>
+                                    <!-- <li><a href="#">Pages</a>
                                         <ul class="dropdown">
                                             <li><a href="index.html">Home</a></li>
                                             <li><a href="about.html">About Us</a></li>
@@ -72,8 +72,8 @@
                                                 </ul>
                                             </li>
                                         </ul>
-                                    </li>
-                                    <li><a href="#">Mega Menu</a>
+                                    </li> -->
+                                    <li><a href="#">Recipes</a>
                                         <div class="megamenu">
                                             <ul class="single-mega cn-col-4">
                                                 <li class="title">Catagory</li>
@@ -114,14 +114,7 @@
                                     <li><a href="receipe-post.html">4 Vegans</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
-
-                                <!-- Newsletter Form -->
-                                <div class="search-btn">
-                                    <i class="fa fa-search" aria-hidden="true"></i>
-                                </div>
-
                             </div>
-                            <!-- Nav End -->
                         </div>
                     </nav>
                 </div>
