--- a/healthierdesserts.html
+++ b/healthierdesserts.html
@@ -92,11 +92,11 @@
     </div>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Cookies</h5>
+      <h5 class="py-3 mb-0">Healthier Desserts</h5>
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/pumpkincookies" class="tstbite-animation rounded-6">
+            <a href="/hazelnuttruffles" class="tstbite-animation rounded-6">
               <img src="assets/images/menus/hazelnuttruffles.JPG" class="w-100" alt="Hazelnut Truffles">
             </a>
             <figcaption class="mt-2">
@@ -106,7 +106,7 @@
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/chocolatechipcookiecake" class="tstbite-animation rounded-6">
+            <a href="/meringues" class="tstbite-animation rounded-6">
               <img src="assets/images/menus/meringues.png" class="w-100" alt="Meringues">
             </a>
             <figcaption class="mt-2">
