--- a/creampuffs.html
+++ b/creampuffs.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Recipes">
   <meta name="author" content="Emily">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Recipes by Emily</title>
+  <title>Recipes Curated by Emily</title>
   <link rel="icon" href="assets/images/logo.png" type="image/png" sizes="16x16"/>
   <link href="assets/css/tastebite-styles.css" rel="stylesheet" type="text/css" media="all">
 </head>
