--- a/breads.html
+++ b/breads.html
@@ -91,159 +91,36 @@
       </div>
     </div>
 
-    <div class="card rounded-16 overflow-hidden border-0 bg-secondary mt-0 mt-md-4">
-      <div class="row g-0">
-        <div class="col-lg-7">
-          <img src="assets/images/menus/cinnamonroll.JPG" class="w-100" alt="Menu">
-        </div>
-        <div class="col-lg-5">
-          <div class="p-4 p-md-5 d-flex flex-column justify-content-center h-100 position-relative">
-            <strong>
-              <svg data-name="feather-icon/trending-up" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
-                <rect data-name="Bounding Box" width="20" height="20" fill="rgba(255,255,255,0)"/>
-                <path d="M.244,11.423a.834.834,0,0,1,0-1.178L6.494,3.994a.834.834,0,0,1,1.178,0L11.25,7.571l5.9-5.9H14.167a.833.833,0,1,1,0-1.667h5A.833.833,0,0,1,20,.833v5a.834.834,0,0,1-1.667,0V2.845L11.839,9.339a.834.834,0,0,1-1.179,0L7.083,5.761l-5.66,5.661a.834.834,0,0,1-1.179,0Z" transform="translate(0 4.167)" fill="#ff642f"/>
-              </svg>
-              <span class="ms-2 caption font-weight-medium">100% would make this again</span>
-            </strong>
-            <h4 class="my-3">Cinnamon Rolls</h4>
-            <p class="big pe-0 pe-md-5 pb-3 pb-sm-5 pb-lg-0">Fluffy dough, a rich cinnamon sugar filling, and a thick cream cheese frosting make for the most perfect cinnamon roll yet.</p>
-            <a href="/cinnamonrolls" class="circle circle-lg tstbite-arrow">
-              <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="13.333" viewBox="0 0 13.333 13.333">
-                <path d="M6.077,13.089a.833.833,0,0,1,0-1.178L10.488,7.5H.833a.833.833,0,0,1,0-1.667h9.655L6.077,1.423A.834.834,0,0,1,7.256.244l5.829,5.83a.833.833,0,0,1,0,1.186L7.256,13.089a.834.834,0,0,1-1.179,0Z" fill="#ff642f"/>
-              </svg>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Categories</h5>
-      <div class="row">
-        <div class="col-lg-2 col-md-4 col-4">
-          <figure class="my-3 text-center tstbite-card">
-            <a href="/cookies" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/menus/cookieicon.JPG" class="rounded-circle" alt="Menu">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/cookies" class="tstbite-category-title">Cookies</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-lg-2 col-md-4 col-4">
-          <figure class="my-3 text-center tstbite-card">
-            <a href="/breads" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/menus/breakfasticon.jpeg" class="rounded-circle" alt="Menu">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/breads" class="tstbite-category-title">Breads</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-lg-2 col-md-4 col-4">
-          <figure class="my-3 text-center tstbite-card">
-            <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/menus/healthicon.JPG" class="rounded-circle" alt="Menu">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/healthierdesserts" class="tstbite-category-title">Healthier Desserts</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-lg-2 col-md-4 col-4">
-          <figure class="my-3 text-center tstbite-card">
-            <a href="/bars" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/menus/bar.png" class="rounded-circle" alt="Menu">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/bars" class="tstbite-category-title">Bars</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-lg-2 col-md-4 col-4">
-          <figure class="my-3 text-center tstbite-card">
-            <a href="/comingsoon" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/menus/savoryicon.png" class="rounded-circle" alt="Menu">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/comingsoon" class="tstbite-category-title">Savory</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-lg-2 col-md-4 col-4">
-          <figure class="my-3 text-center tstbite-card">
-            <a href="/other" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/menus/cupcakesicon.jpg" class="rounded-circle" alt="Menu">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/other" class="tstbite-category-title">Other</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-    </section>
-    <!-- Tstbite Components, My 4, My Md 5 -->
-    <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Popular Recipes</h5>
+      <h5 class="py-3 mb-0">Breads</h5>
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/bostoncreamcupcakes" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/bostoncreamcupcakes.png" class="w-100" alt="Boston Cream Cupcakes">
+            <a href="/dinnerrolls" class="tstbite-animation rounded-6">
+              <img src="assets/images/menus/dinnerrolls.jpg" class="w-100" alt="Dinner Rolls">
             </a>
             <figcaption class="mt-2">
-              <a href="/bostoncreamcupcakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Boston Cream Cupcakes</a>
+              <a href="/dinnerrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Dinner Rolls</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/cinnamonrolls" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/cinnamonrolls.png" class="w-100" alt="Cinnamon Rolls">
+            <a href="/loafbread" class="tstbite-animation rounded-6">
+              <img src="assets/images/menus/loafbread.jpg" class="w-100" alt="Loaf Bread">
             </a>
             <figcaption class="mt-2">
-              <a href="/cinnamonrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cinnamon Rolls</a>
+              <a href="/loafbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Loaf Bread</a>
             </figcaption>
           </figure>
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/monkeybread" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/monkeybread.jpeg" class="w-100" alt="Menu">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/biscuits" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/biscuits.jpg" class="w-100" alt="Boston Cream Cupcakes">
+              <img src="assets/images/menus/biscuits.jpg" class="w-100" alt="Biscuits">
             </a>
             <figcaption class="mt-2">
               <a href="/biscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/creampuffs" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/creampuffs.jpg" class="w-100" alt="Cinnamon Rolls">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/creampuffs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Puffs</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/chocolatechipcookiecake" class="tstbite-animation rounded-6">
-              <img src="assets/images/menus/chocolatechipcookiecake.jpg" class="w-100" alt="Menu">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/chocolatechipcookiecake" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookie Cake</a>
             </figcaption>
           </figure>
         </div>
