--- a/newyorkbakeries.html
+++ b/newyorkbakeries.html
@@ -75,6 +75,9 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/angelina.png" class="rounded-circle" >
             </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Angelina Paris</a>
+            </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
@@ -82,6 +85,9 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/laduree.png" class="rounded-circle" >
             </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Ladurée</a>
+            </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
@@ -89,6 +95,9 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/eclair.png" class="rounded-circle" >
             </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Eclair Bakery</a>
+            </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
@@ -96,6 +105,9 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/maman.png" class="rounded-circle" >
             </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Maman</a>
+            </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
@@ -103,6 +115,9 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/dominique.png" class="rounded-circle" >
             </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Dominique Ansel</a>
+            </figcaption>
           </figure>
         </div>
       </div>
