--- a/sandiegobakeries.html
+++ b/sandiegobakeries.html
@@ -75,6 +75,9 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/wayfarer.png" class="rounded-circle" >
             </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Wayfarer Bread & Pastry</a>
+            </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
@@ -82,6 +85,9 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/madeleine.png" class="rounded-circle" >
             </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Madeleine Café & Bakery</a>
+            </figcaption>
           </figure>
         </div>      
       </div>
